<resources>
    <string name="app_name">Trivia App</string>
    <string name="title_text">Trivia</string>
    <string name="out_of_text">Question: 45/89</string>
    <string name="true_button">true</string>
    <string name="false_button">false</string>
    <string name="next_button">next</string>
    <string name="placeholder">Hello world this is where we are going to add the actual text to be shown!</string>
    <string name="text_formated">Question: %d/%d</string>
    <string name="correct_answer">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="highest_score" />
</resources>