<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0D152E"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/text_title"
            style="@style/MainTextStyle"
            android:text="@string/title_text"
            android:textColor="@color/light_gray_txt_color"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.116"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.087" />

        <TextView
            android:id="@+id/text_view_out_of"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/out_of_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.604"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="381dp"
            android:layout_height="179dp"
            android:layout_marginTop="100dp"
            android:backgroundTint="#1B213A"
            android:elevation="12dp"
            app:cardCornerRadius="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_out_of">

            <TextView
                android:id="@+id/question_textview"
                style="@style/MainTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:paddingStart="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:text="@string/placeholder"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_true"
            style="@style/ButtonStyle"
            android:layout_width="390dp"
            android:layout_marginTop="8dp"
            android:text="@string/true_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view" />

        <Button
            android:id="@+id/button_false"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:layout_marginTop="36dp"
            android:text="@string/false_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_true" />

        <Button
            android:id="@+id/button_next"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:layout_marginTop="12dp"
            android:text="@string/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.864"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_false" />

        <TextView
            android:id="@+id/score_text"
            android:layout_width="197dp"
            android:layout_height="33dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/text_view_out_of"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.552"
            app:layout_constraintStart_toEndOf="@+id/text_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.341" />

        <TextView
            android:id="@+id/highest_score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Highest:"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/text_view_out_of"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toEndOf="@+id/text_title"
            app:layout_constraintTop_toBottomOf="@+id/score_text"
            app:layout_constraintVertical_bias="0.516" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>